# SQLite-Python-Database

./: pyproject.toml
data/: makedb.py  parks.db  warmup1.sql  warmup2.py
parks_search/: app.py  db.py  search.py
parks_search/templates/: index.html
tests/: test_haversine.py  test_search.py
