[tool.poetry]
name = "parks-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parks_search"}]

[tool.poetry.dependencies]
python = "^3.8.1"
lxml = "^4.9.1"
requests = "^2.28.1"
ipython = "^8.7.0"
pytest = "^7.2.0"
cssselect = "^1.2.0"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
